Updates on Back End Server.

--- a/Back-End-SpringBoot-Server/SpringBootCompany/pom.xml
+++ b/Back-End-SpringBoot-Server/SpringBootCompany/pom.xml
@@ -91,6 +91,21 @@
                 </executions>
 
             </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.mycompany.springboot.SpringbootApplication</mainClass>
+                </configuration>
+
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
