--- a/Back-End-SpringBoot-Server/SpringBootCompany/src/main/resources/application.properties
+++ b/Back-End-SpringBoot-Server/SpringBootCompany/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/vehicles?serverTimezone=Europe/Athens
 spring.datasource.username = root
 spring.datasource.password = <v5w(M<u55=`5RkU
+
+spring.jpa.hibernate.ddl-auto=update
