--- a/Back-End-SpringBoot-Server/SpringBootCompany/src/main/resources/application.properties
+++ b/Back-End-SpringBoot-Server/SpringBootCompany/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.datasource.url = jdbc:mysql://localhost:3306/vehicles?serverTimezone=Euro
 spring.datasource.username = root
 spring.datasource.password = <v5w(M<u55=`5RkU
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update //auto creation of database
